# localRAG

./: .env.example  .gitignore  Dockerfile  Dockerfile.ui  README.md  TESTING_GUIDE.md  backend_logs.txt  docker-compose.yml  package-lock.json  package.json  requirements-ui.txt  requirements.txt  temp_openapi.json
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: agent.py  chat.py  docs.py  graph.py  health.py  logs.py  repo.py  search.py  settings.py
backend/app/core/: embedding.py  llm_client.py  rag_engine.py  settings_manager.py  vector_store.py
backend/app/ingestion/: __init__.py  chunker.py  graph_builder.py  parser.py  pipeline.py  repo_manager.py
backend/app/models/: __init__.py  schemas.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  streamlit_app.py  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Agent.tsx  Chat.tsx  Dashboard.tsx  Layout.tsx  Loader.tsx  Logs.tsx  RepoCard.tsx  RepoDetail.tsx  Search.tsx  SearchResultCard.tsx  Settings.tsx
frontend/src/contexts/: LogsContext.tsx
tests/: test_system_structure.py  test_url_sanitization.py
