[project]
name = "localrag-backend"
version = "0.1.0"
description = "LocalRAG Code Intelligence API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sse-starlette==2.1.3",
    "openai==1.51.0",
    "sentence-transformers==3.1.1",
    "tiktoken==0.7.0",
    "qdrant-client==1.11.2",
    "tree-sitter==0.23.0",
    "tree-sitter-python==0.23.0",
    "tree-sitter-javascript==0.23.0",
    "tree-sitter-typescript==0.23.0",
    "networkx==3.3",
    "gitpython==3.1.43",
    "PyGithub==2.4.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "aiofiles==24.1.0",
    "rich==13.8.1",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
